# Build arguments go here.
# See "gn args <out_dir> --list" for available build arguments.
#is_debug = true  # Enable debugging features.
is_debug = false

pdf_enable_v8 = false

# Set true to enable experimental Skia backend.
pdf_use_skia = false
# Set true to enable experimental Skia backend (paths only).
pdf_use_skia_paths = false
pdf_is_standalone = true  # Set for a non-embedded build.
clang_use_chrome_plugins = false  # Currently must be false.

is_component_build = false
pdf_is_complete_lib = true

use_custom_libcxx = false

# We need typeinfo to be able to subclass virtual classes
use_rtti = true

#use_system_libjpeg = true

#use_sysroot = false